[package]
name = "sonar-clmm-dex"
version = "0.1.0"
description = "Uniswap V3-like CLMM DEX"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sonar_clmm_dex"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { git="https://github.com/solana-foundation/anchor.git" }
anchor-spl = { git = "https://github.com/solana-foundation/anchor.git", features = ["token"] }
proc-macro2 = "1.0.94"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }